# rpm-spec-language-server

./: .buildinfo  .dockerignore  .gitignore  .vscodeignore  Containerfile.bci  Containerfile.centos  Containerfile.fedora  Containerfile.leap  Containerfile.tumbleweed  README.rst  genindex.html  index.html  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml  release.yml  vscode-extension.yml
clients/neovim/: rpmspec.lua
clients/vscode/src/: extension.ts
resources/: spec.md
rpm_spec_language_server/: __main__.py  autocomplete_data.json  document_symbols.py  extract_docs.py  logging.py  macros.py  main.py  server.py  util.py
rpm_spec_language_server/deprecated_macros/: __init__.py  altlinux.py  fedora.py  opensuse.py
source/: conf.py  index.rst
tests/: conftest.py  data.py  test_document_symbols.py  test_extract_docs.py  test_macro.py  test_server.py  test_util.py
utils/: README.rst  autocomplete_data.json  extract_docs.py  spec.md
