[tool.poetry]
name = "rpm_spec_language_server"
version = "0.0.1"
description = "Language Server for RPM spec files"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "GPL-2.0-or-later"
readme = "README.rst"
packages = [{include = "rpm_spec_language_server"}]

[tool.poetry.dependencies]
python = "^3.11"
pygls = "^1.0"
specfile = ">=0.18"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3"
black = ">=23.3"
mypy = ">=1.3"
Sphinx = ">=7"
coverage = ">=7.3"

[tool.poetry.scripts]
rpm_lsp_server = "rpm_spec_language_server.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "rpm"
ignore_missing_imports = true
