[tool.poetry]
name = "rpm_spec_language_server"
version = "0.0.1"
description = "Language Server for RPM spec files"
authors = [
    "Dan Čermák <dcermak@suse.com>",
    "Jehan Singh <jehan.singh@suse.com>",
    "Matěj Cepl <mcepl@cepl.eu>"
]
license = "GPL-2.0-or-later"
readme = "README.rst"
packages = [{include = "rpm_spec_language_server"}]

[tool.poetry.dependencies]
python = "^3.9"
pygls = "^1.2"
specfile = ">=0.18"
requests = ">=2.32"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3"
mypy = ">=1.3"
Sphinx = ">=7"
coverage = ">=7.3"
ruff = ">=0.1.4"
twine = ">=4.0.2"
typeguard = ">=4.1.5"
types-requests = ">=2.32.0.20240602"

[tool.poetry.scripts]
rpm_lsp_server = "rpm_spec_language_server.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "rpm"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.ruff]
src = ["src", "tests", "source"]
target-version = "py39"
